--- a/map/concerts/templates/concerts/map.html
+++ b/map/concerts/templates/concerts/map.html
@@ -1,213 +1,220 @@
 <!doctype html>
 <html>
-  <head>
-    <title>Map</title>
+<head>
+  <title>Map</title>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300" rel="stylesheet">
 
-    <style>
-      #map {
-        height: 100vh;
-      }
-      .left_column {
-        width: 44%;
-        margin-left: 4%;
-      }
-      .right_column {
-        width: 44%;
-        margin-right: 4%;
-      }
-      .info {
-        display: flex;
-        align-items: top;
-        justify-content: space-between;
-      }
-      .bar {
-        pointer-events: none;
-        position: absolute;
-        width: 100%;
-        z-index: 1;
-        margin-top: 1%;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-      }
-      .scroll a {
-        padding-top: 60px;
-        position: absolute;
-        z-index: 1;
-        top: 90%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        color: #EB4335;
-        font-family: 'Josefin Sans', sans-serif;
-        font-size: 40px;
-        text-decoration: none;
-        transition: opacity .3s;
-      }
-      .scroll a:hover {
-        opacity: .5;
-      }
-      .scroll a span {
-        position: absolute;
-        top: 0;
-        left: 50%;
-        width: 24px;
-        height: 24px;
-        margin-left: -12px;
-        border-left: 2px solid #EB4335;
-        border-bottom: 2px solid #EB4335;
-        -webkit-transform: rotate(-45deg);
-        box-sizing: border-box;
-      }
-      #btn {
-        pointer-events: all;
-        border-color: #EB4335;
-        color: #EB4335;
-      }
-      #button:hover {
-        background-color: rgba(255, 255, 255, 0.5);
-      }
-      #spacer {
-        height: 28px;
-      }
-      h1 {
-        margin-top: 1%;
-        color: #EB4335;
-        -webkit-text-stroke-width: 0.8px;
-        -webkit-text-stroke-color: white;
-        font-size: 84px;
-        font-family: 'Josefin Sans', sans-serif;
-      }
-      h2 {
-        font-size: 48px;
-        font-family: 'Josefin Sans', sans-serif;
-      }
-      h3 {
-        margin-bottom: 4%;
-      }
-      img {
-        margin-bottom: 4%;
-      }
-      p {
-        text-indent: 40px;
-      }
-    </style>
-        
-    <!--Load jQuery and the cross-origin jQuery plugin-->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script type="text/javascript" src="/static/concerts/jquery.ajax-cross-origin.min.js"></script>
-    <!--Script to animate scrolling effect for the "More Info" button-->
-    <script type="text/javascript">
-      $(function() {
-        $('a[href="#spacer"]').on('click', function(e) {
-          e.preventDefault();
-          $('html, body').animate({ scrollTop: $($(this).attr('href')).offset().top}, 500, 'linear');
-        });
-      });
-    </script>
-  </head>
+  <style>
+  #map {
+    height: 100vh;
+  }
+  .left_column {
+    width: 44%;
+    margin-left: 4%;
+  }
+  .right_column {
+    width: 44%;
+    margin-right: 4%;
+  }
+  .info {
+    display: flex;
+    align-items: top;
+    justify-content: space-between;
+  }
+  .bar {
+    pointer-events: none;
+    position: absolute;
+    width: 100%;
+    z-index: 1;
+    margin-top: 1%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .scroll a {
+    padding-top: 60px;
+    position: absolute;
+    z-index: 1;
+    top: 90%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #EB4335;
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 40px;
+    text-decoration: none;
+    transition: opacity .3s;
+  }
+  .scroll a:hover {
+    opacity: .5;
+  }
+  .scroll a span {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 24px;
+    height: 24px;
+    margin-left: -12px;
+    border-left: 2px solid #EB4335;
+    border-bottom: 2px solid #EB4335;
+    -webkit-transform: rotate(-45deg);
+    box-sizing: border-box;
+  }
+  #btn {
+    pointer-events: all;
+    border-color: #EB4335;
+    color: #EB4335;
+  }
+  #button:hover {
+    background-color: rgba(255, 255, 255, 0.5);
+  }
+  #spacer {
+    height: 28px;
+  }
+  h1 {
+    margin-top: 1%;
+    color: #EB4335;
+    -webkit-text-stroke-width: 0.8px;
+    -webkit-text-stroke-color: white;
+    font-size: 84px;
+    font-family: 'Josefin Sans', sans-serif;
+  }
+  h2 {
+    font-size: 48px;
+    font-family: 'Josefin Sans', sans-serif;
+  }
+  h3 {
+    margin-bottom: 4%;
+  }
+  img {
+    margin-bottom: 4%;
+  }
+  p {
+    text-indent: 40px;
+  }
+  </style>
 
-    <body>
-      <div class="bar">
-        <a id="btn" href="/concerts/table/" class="btn btn-lg btn-outline-primary" style="margin-left: 2%">Return</a>
-        <h1>Concert Finder</h1>
-        <a id="btn" href="/concerts/" class="btn btn-lg btn-outline-primary" style="margin-right: 2%">Logout</a>
-      </div>
+  <!--Load jQuery and the cross-origin jQuery plugin-->
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script type="text/javascript" src="/static/concerts/jquery.ajax-cross-origin.min.js"></script>
+  <!--Script to animate scrolling effect for the "More Info" button-->
+  <script type="text/javascript">
+  $(function() {
+    $('a[href="#spacer"]').on('click', function(e) {
+      e.preventDefault();
+      $('html, body').animate({ scrollTop: $($(this).attr('href')).offset().top}, 500, 'linear');
+    });
+  });
+  </script>
+</head>
 
-      <section class="scroll">
-        <a href="#spacer"><span></span>More Info</a>
-      </section>
+<body>
+  <div class="bar">
+    <a id="btn" href="/concerts/table/" class="btn btn-lg btn-outline-primary" style="margin-left: 2%">Return</a>
+    <h1>Concert Finder</h1>
+    <a id="btn" href="/concerts/" class="btn btn-lg btn-outline-primary" style="margin-right: 2%">Logout</a>
+  </div>
 
-      <!--This is where the map goes-->
-      <div id="map"></div>
+  <section class="scroll">
+    <a href="#spacer"><span></span>More Info</a>
+  </section>
 
-      <div id="spacer"></div>
-      <center><h2><b>{{ name }}</b></h2></center>
+  <!--This is where the map goes-->
+  <div id="map"></div>
 
-      <div class="info">
-        <div class="left_column">
-          <center><h3>Tour Dates</h3></center>
-            <table class="datatable table table-striped table-bordered">
-              <thead>
-                <tr>
-                  <th></th>
-                  <th>Date</th>
-                  <th>Venue</th>
-                  <th>City</th>
-                </tr>
-              </thead>
-              <tbody id="table">
-              </tbody>
-            </table>
-        </div>
+  <div id="spacer"></div>
+  <center><h2><b>{{ name }}</b></h2></center>
 
-        <div class="right_column" id="about">
-          <center>
-            <h3>Profile</h3>
-            <img src={{ image_url }} alt='Profile' height='300px'>
-          </center>
-        </div>
-      </div>
+  <div class="info">
+    <div class="left_column">
+      <center><h3>Tour Dates</h3></center>
+      <table class="datatable table table-striped table-bordered">
+        <thead>
+          <tr>
+            <th></th>
+            <th>Date</th>
+            <th>Venue</th>
+            <th>City</th>
+          </tr>
+        </thead>
+        <tbody id="table">
+        </tbody>
+      </table>
+    </div>
+
+    <div class="right_column" id="about">
+      <center>
+        <h3>Profile</h3>
+        <img src={{ image_url }} alt='Profile' height='300px'>
+      </center>
+    </div>
+  </div>
     <!--This script loads the map and the table 
         simultaneously in real time as it fetches 
         the data from songkick-->
-    <script type="text/javascript">
+        <script type="text/javascript">
       /* This function is called automatically once 
-         the google maps API loads */
+      the google maps API loads */
       function initMap() {
         var map = new google.maps.Map(document.getElementById("map"));
         /* Intialize the map bounds, 
            which update to fit 
            the loaded markers */
-        var bounds = new google.maps.LatLngBounds();
-        /* Get concert information from songkick */
-        $.getJSON("http://api.songkick.com/api/3.0/artists/" + {{ ident }} + "/calendar.json?apikey=cXZIiAYhAxu4hSUU", 
-          function(data) {
-            var events = data.resultsPage.results.event;
-            for(var i = 0; i < events.length; i++) {
-              var event = events[i];
-              var latlng = {lat: event.location.lat, lng: event.location.lng};
-              var uri = event.uri
-              var city = event.venue.metroArea.displayName
-              var venue = event.venue.displayName
-              var ISO_8601 = event.start.datetime
-              if (!ISO_8601) {
-                var ISO_8601 = event.start.date
-              }
-              var date = ISO_8601.toString();
-              var date_data = date.split('-');
-              var months = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December']
-              var year = date_data[0]
-              var month = months[date_data[1] - 1]
-              var day = date_data[2].substr(0, 2)
-              var time = date_data[2].substr(3, 5)
-              if (time) {
-                var dat_str = month + " " + day + ", " + year + " at " + time
-              }
-              else {
-                var dat_str = month + " " + day + ", " + year
-              }
+           var bounds = new google.maps.LatLngBounds();
+           /* Get concert information from songkick */
+           $.getJSON("http://api.songkick.com/api/3.0/artists/" + {{ ident }} + "/calendar.json?apikey=cXZIiAYhAxu4hSUU", 
+            function(data) {
+              var events = data.resultsPage.results.event;
+              for(var i = 0; i < events.length; i++) {
+                var event = events[i];
+                var latlng = {lat: event.location.lat, lng: event.location.lng};
+                var uri = event.uri
+                var city = event.venue.metroArea.displayName
+                var venue = event.venue.displayName
+                var ISO_8601 = event.start.datetime
+                if (!ISO_8601) {
+                  var ISO_8601 = event.start.date
+                }
 
-              var row = "<tr>"
-                      + "<td>" + (i + 1) + "</td>"
-                      + "<td>" + dat_str + "</td>"
-                      + "<td>" + venue + "</td>"
-                      + "<td>" + city + "</td>"
-                      + "</tr>"
-              $('#table').append(row);
-              /* Place a marker on the map for the current concert */
-              var marker = new google.maps.Marker({
-                position: latlng,
-                label: '' + (i + 1),
-                html: "<a target=_blank href=" + uri + ">" + venue + ", " + city + "</a>",
-                map: map
-              });
-              /* Update the bounds */
-              bounds.extend(latlng)
+
+                /* Makes the date user readable for the table */
+                var months = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December']
+
+                var date = ISO_8601.toString();
+                var date_data = date.split('-');
+                var year = date_data[0];
+                var month = months[date_data[1] - 1];
+                var day = date_data[2].substr(0, 2);
+                var time = date_data[2].substr(3, 5);
+
+                if (time) {
+                  var dat_str = month + "  " + day + ",  " + year + " at " + time
+                }
+                else {
+                  var dat_str = month + "  " + day + ",  " + year
+                }
+
+
+
+                var row = "<tr>"
+                + "<td>" + (i + 1) + "</td>"
+                + "<td>" + dat_str + "</td>"
+                + "<td>" + venue + "</td>"
+                + "<td>" + city + "</td>"
+                + "</tr>"
+                $('#table').append(row);
+                /* Place a marker on the map for the current concert */
+                var marker = new google.maps.Marker({
+                  position: latlng,
+                  label: '' + (i + 1),
+                  html: "<a target=_blank href=" + uri + ">" + venue + ", " + city + "</a>",
+                  map: map
+                });
+                /* Update the bounds */
+                bounds.extend(latlng)
               /* Display a link to buy tickets 
-                 when the user clicks the marker */
+              when the user clicks the marker */
               infowindow = new google.maps.InfoWindow({
                 content: "placeholder"
               });
@@ -218,25 +225,25 @@
             }
             /* Fit the map to the final bounds */
             map.fitBounds(bounds);
-        });
-      }
-    </script>
+          });
+}
+</script>
     <!--This script only works some of the time. 
         It is limited by the same-origin policy. 
         If it works, it scrapes a description of 
         the artist off songkick, if there is one.-->
-    <script type="text/javascript">
-      $.ajax({
-        crossOrigin: true,
-        url: "https://www.songkick.com/artists/" + {{ ident }},
-        success: function(data) {
-          $('#about').append($($(data).find('div#biography')).find('p'));
-        }
-      });
-    </script>
-    <!--This script loads the google maps API-->
-    <script async defer 
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGJH48WTSTLfykQaM-d-LHlVTT1Z0qVYY&callback=initMap">
-    </script>
-  </body>
-</html>
+        <script type="text/javascript">
+        $.ajax({
+          crossOrigin: true,
+          url: "https://www.songkick.com/artists/" + {{ ident }},
+          success: function(data) {
+            $('#about').append($($(data).find('div#biography')).find('p'));
+          }
+        });
+        </script>
+        <!--This script loads the google maps API-->
+        <script async defer 
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGJH48WTSTLfykQaM-d-LHlVTT1Z0qVYY&callback=initMap">
+        </script>
+      </body>
+      </html>
